change lint settings
* error to warning for non-translated strings
* fix new Integer to Integer.valueOf